src/main/java/com/example/fas/repositories/services/serviceImpl/exceptions/user/error/HadUserRoleAdminException.java
package com.example.fas.repositories.services.serviceImpl.exceptions.user.error;

public class HadUserRoleAdminException extends RuntimeException {
    public HadUserRoleAdminException(String message) {
        super(message);
    }
}
